kong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: api.polaris.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sample-api-svc
              port:
                number: 80
